--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -22,7 +22,7 @@
     font-size: 21px;
     line-height: 25px;
     letter-spacing: 0.0015em;
-    color: #e8eef1;
+    color: #000000;
 }
 .product-info{
     margin-left: 14px;
